新增超連結

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>hi</title>
 </head>
 <body>
-hi
-<br>
-<img src="img/hi.jpeg"width="360"height="360">
+    <a  href="about.html">About Me</a>
+    <br>
+    <img src="img/hi.jpeg"width="360"height="360">
 </body>
 </html>
