新增font color and background

--- a/index.html
+++ b/index.html
@@ -3,8 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>hi</title>
+    <style>
+        h1{
+            color: #90d9f5;
+            font-size:30px;
+        }
+            /***for class***/
+            .card{
+                background: #d91e2f;
+            }
+            .whitefont{
+                color:white;
+            }
+            /*for id*/
+        #new_card{
+            background:cornflowerblue;
+        }
+    </style>
 </head>
 <body>
+    <h1>H1 的文字</h1>
+    <div id="new_card"   class="card">
+        這是一張卡片
+    </div>
+    <br>
+    <div    class="card whitefont">
+        這是一張卡片
+    </div>
+    <br>
+    <div    class="card">
+        這是一張卡片
+    </div>
     <a  href="about.html">About Me</a>
     <br>
     <img src="img/hi.jpeg"width="360"height="360">
